<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  Created by Pooran Kharol on 13/2/21 12:24 PM
  ~  Copyright (c) 2021 . All rights reserved.
  ~  Last modified 13/2/21 12:24 PM
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/mob_num_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_proceed"
        android:background="@drawable/round_dialog"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/sorry"
                    android:textColor="@color/active"
                    android:textSize="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/closeBtn"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/ic_close"
                    app:tint="@color/burmudaGrey" />

            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_155sdp"
                android:layout_height="@dimen/_155sdp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/tid_disabled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="0.1dp"
                android:padding="@dimen/_10sdp"
                android:text="@string/this_terminal_id_has_been_deactivated_and_does_not_have_access_to_accept_payments_please_contact_hdfc_bank_support_for_any_queries"
                android:textColor="@color/active"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_proceed"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/paybutton_active"
        android:fontFamily="@font/montserrat_regular"
        android:padding="@dimen/_12sdp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>