<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  Created by Pooran Kharol on 30/1/21 1:56 PM
  ~  Copyright (c) 2021 . All rights reserved.
  ~  Last modified 30/1/21 1:55 PM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--header-->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/select_tid"
            android:textColor="@color/grayText2"
            android:textSize="@dimen/_12ssp" />


        <ImageView
            android:id="@+id/imgV_btm_sheet_cross"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/ic_close"
            app:tint="@color/burmudaGrey" />


    </RelativeLayout>
    <!--end header-->
    <RelativeLayout
        android:id="@+id/locationLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="12dp"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/area_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_2sdp"
            android:text="Bandra"
            android:textColor="@color/active"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/area_tid_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="@dimen/_2sdp"
            android:text="2 TIDs"
            android:textColor="@color/active"
            android:textSize="@dimen/_12ssp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLL">

        <!--checkbox select_all-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_edittext"
            android:padding="@dimen/_8sdp">

            <CheckBox
                android:id="@+id/checkbox_slct_tid_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/select_all"
                android:textColor="@color/grayText"
                android:textSize="@dimen/_12ssp"
                android:theme="@style/common_checkbox" />

        </LinearLayout>
        <!--end checkbox select_all-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_slct_tid_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_btm_slct_tid_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/paybutton_active"
        android:fontFamily="@font/montserrat_regular"
        android:padding="@dimen/_12sdp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list" />

</androidx.constraintlayout.widget.ConstraintLayout>