<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  Created by Pooran Kharol on 30/1/21 3:54 PM
  ~  Copyright (c) 2021 . All rights reserved.
  ~  Last modified 30/1/21 3:50 PM
  ~  */
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <!--checkbox-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_slct_loct_dba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray" />
            <!--end checkbox-->

            <!--search bar-->
            <RelativeLayout
                android:id="@+id/relative_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/toolbarCard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/searchIv"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:src="@drawable/search"
                            app:tint="@color/graytext3" />


                        <EditText
                            android:id="@+id/edt_transaction_search"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_toEndOf="@+id/searchIv"
                            android:background="@null"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/search_for_cities_amp_locations"
                            android:textColor="@color/blackText"
                            android:textColorHint="@color/graytext3"
                            android:textSize="@dimen/_12ssp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <!--end search bar-->

            <!--search view-->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/divider_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />
            <!--end search view-->

            <!--City Locations & Clear-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">

                <!--City-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_active"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/city"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/tv_slct_loct_city_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <!--Locations-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/background_active"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/tv_slct_loct_locations_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>
                <!--End Locations-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/tv_slct_loct_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_regular"
                        android:foreground="?selectableItemBackground"
                        android:padding="8dp"
                        android:text="@string/clear_underline"
                        android:textColor="@color/grayText"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>
            <!--End City Locations & Clear-->

            <!--checkbox select_all-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/_10sdp">

                <CheckBox
                    android:id="@+id/checkbox_slct_loct_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                   android:paddingStart="@dimen/_10sdp"
                    android:text="@string/select_all"
                    android:textColor="@color/input_text_color"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/common_checkbox" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/divider_color"/>
            <!--end checkbox select_all-->

            <RelativeLayout
                android:id="@+id/relative_view_cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cityRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>